# gobazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
backend/cmd/service/: BUILD.bazel  main.go
common/: BUILD.bazel  index.tsx  utils.ts
publicapi/: BUILD.bazel  auth.proto  core.proto  index.ts
src/common/: BUILD.bazel  index.tsx
src/web/: BUILD.bazel  index.html  index.tsx
web/: BUILD.bazel  copy.js  index.html  index.tsx  package-lock.json  tsconfig.json
web/config/: paths.js  webpack.config.dev.js
web/scripts/: build.js  null.js  start.js
web/src/: index.jsx  index1.tsx
