package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    module_name = "common",
    srcs = glob(['*.ts', '*.tsx']),
    tsconfig = "//:tsconfig.build.json",
    deps = [
        "@npm//typescript",
        "@npm//react",
    ]
)
