package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

# ts_library(
#     name = "src",
#     srcs = ["src/index.tsx"],
#     tsconfig = "//:tsconfig.build.json",
#     deps = [
#       "//common:src",
#       "//publicapi:publicapi_ts",
#     ]
# )

# load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

# ts_devserver(
#     name = "devserver",
#     additional_root_paths = [
#         "gobazel/node_modules/react/umd",
#         "gobazel/node_modules/react-dom/umd",
#     ],
#     port = 9999,
#     serving_path = "/bundle.min.js",
#     # entry_module = "gobazel/src/frontend/main",
#     deps = [":src"],
#     static_files = [
#         ":index.html",
#         "//:node_modules/react/umd/react.development.js",
#         "//:node_modules/react-dom/umd/react-dom.development.js"
#     ],
# )

# Experiment

filegroup(
    name = "web_node_modules",
    srcs = glob([
        "node_modules/**/*",
    ],
        exclude=["node_modules/**/test/**"]
    ),
)

filegroup(
    name = "package_json",
    srcs = glob(["package.json"]),
)

filegroup(
    name = "tsconfig_json",
    srcs = glob(["tsconfig.json"]),
)

filegroup(
    name = "babelrc",
    srcs = glob([".babelrc"]),
)

filegroup(
    name = "config_files",
    srcs = glob(["config/**/*.js"])
)

filegroup(
    name = "src_files",
    srcs = glob(["src/**/*.ts", "src/**/*.tsx", "src/**/*.js", "src/**/*.jsx",])
)

filegroup(
    name = "script_files",
    srcs = glob(["scripts/*.js"])
)

filegroup(
    name = "public_files",
    srcs = glob(["public/**/*"])
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

# https://github.com/pward123/bazel-cra-example/blob/master/packages/cra-example/BUILD.bazel
nodejs_binary(
    name = "start",
    visibility = ["//visibility:public"],
    entry_point = "gobazel/web/scripts/start.js",
    node_modules = "@webnpm//:node_modules",
    data = [
        ":package_json",
        ":tsconfig_json",
        ":babelrc",
        ":config_files",
        ":src_files",
        ":script_files",
        ":public_files",
        #"@webnpm//:node_modules"
    ]
)



# nodejs_binary(
#     name = "devserver",
#     visibility = ["//visibility:public"],
#     entry_point = "web/scripts/start.js",
#     data = [
#         ":package_json",
#         ":config_files",
#         ":src",
#         ":script_files",
#         ":public_files",

#         # ":web_node_modules",
#         # dependencies
#     # "@material-ui/core": "3.1.1",
#     # "@material-ui/icons": "3.0.1",
#     # "@types/faker": "4.1.4",
#     # "@types/history": "4.7.0",
#     # "@types/jest": "23.3.2",
#     # "@types/prop-types": "15.5.5",
#     # "@types/qs": "6.5.1",
#     # "@types/react": "16.4.14",
#     # "@types/react-dom": "16.0.8",
#     # "@types/react-redux": "6.0.9",
#     # "@types/react-router-dom": "4.3.1",
#     # "@types/redux-mock-store": "1.0.0",
#     # "@types/validator": "9.4.2",
#     # "ajv": "6.5.4",
#     # "ajv-errors": "1.0.0",
#     # "autoprefixer": "7.1.2",
#     # "babel-core": "6.25.0",
#     # "babel-eslint": "7.2.3",
#     # "babel-jest": "20.0.3",
#     # "babel-loader": "7.1.1",
#     # "babel-preset-react-app": "3.0.2",
#     # "babel-runtime": "6.23.0",
#     # "case-sensitive-paths-webpack-plugin": "2.1.1",
#     # "chalk": "1.1.3",
#     # "core-js": "2.5.7",
#     # "css-loader": "0.28.4",
#     # "dotenv": "4.0.0",
#     # "eslint": "4.4.1",
#     # "eslint-config-react-app": "2.0.0",
#     # "eslint-loader": "1.9.0",
#     # "eslint-plugin-flowtype": "2.35.0",
#     # "eslint-plugin-import": "2.7.0",
#     # "eslint-plugin-jsx-a11y": "5.1.1",
#     # "eslint-plugin-react": "7.1.0",
#     # "extract-text-webpack-plugin": "3.0.0",
#     # "faker": "4.1.0",
#     # "file-loader": "0.11.2",
#     # "fs-extra": "3.0.1",
#     # "gh-pages": "2.0.1",
#     # "history": "4.7.2",
#     # "html-webpack-plugin": "2.29.0",
#     # "jest": "23.6.0",
#     # "linq": "3.1.0",
#     # "lodash": "^4.17.11",
#     # "moment": "2.22.2",
#     # "object-assign": "4.1.1",
#     # "path-to-regexp": "2.4.0",
#     # "postcss-flexbugs-fixes": "3.2.0",
#     # "postcss-loader": "2.0.6",
#     # "promise": "8.0.1",
#     # "qs": "6.5.2",
#     # "react": "16.4.2",
#     # "react-dev-utils": "3.1.0",
#     # "react-dom": "16.4.2",
#     # "react-error-overlay": "1.0.10",
#     # "react-helmet": "5.2.0",
#     # "react-intl": "2.4.0",
#     # "react-loadable": "5.4.0",
#     # "react-redux": "5.0.7",
#     # "react-router-dom": "4.3.1",
#     # "react-router-redux": "5.0.0-alpha.9",
#     # "react-router-scroll-4": "1.0.0-beta.2",
#     # "redux": "4.0.0",
#     # "redux-mock-store": "1.5.3",
#     # "redux-thunk": "2.3.0",
#     # "style-loader": "0.18.2",
#     # "sw-precache-webpack-plugin": "0.11.4",
#     # "ts-jest": "23.10.2",
#     # "ts-loader": "3.5.0",
#     # "typescript": "3.0.3",
#     # "url-loader": "1.0.1",
#     # "validator": "10.8.0",
#     # "webpack": "3.5.1",
#     # "webpack-dev-server": "2.7.1",
#     # "webpack-manifest-plugin": "1.2.1",
#     # "whatwg-fetch": "2.0.3"



#     #     "@npm//@babel/core",
#     #     "@npm//@svgr/webpack",
#     #     "@npm//babel-core",
#     #     "@npm//babel-eslint",
#     #     "@npm//babel-jest",
#     #     "@npm//babel-loader",
#     #     "@npm//babel-plugin-named-asset-import",
#     #     "@npm//babel-preset-react-app",
#     #     "@npm//bfj",
#     #     "@npm//case-sensitive-paths-webpack-plugin",
#     #     "@npm//chalk",
#     #     "@npm//css-loader",
#     #     "@npm//eslint",
#     #     "@npm//eslint-config-react-app",
#     #     "@npm//eslint-loader",
#     #     "@npm//eslint-plugin-flowtype",
#     #     "@npm//eslint-plugin-import",
#     #     "@npm//eslint-plugin-jsx-a11y",
#     #     "@npm//eslint-plugin-react",
#     #     "@npm//file-loader",
#     #     "@npm//fs-extra",
#     #     "@npm//html-webpack-plugin",
#     #     "@npm//identity-obj-proxy",
#     #     "@npm//jest",
#     #     "@npm//jest-pnp-resolver",
#     #     "@npm//jest-resolve",
#     #     "@npm//mini-css-extract-plugin",
#     #     "@npm//optimize-css-assets-webpack-plugin",
#     #     "@npm//pnp-webpack-plugin",
#     #     "@npm//postcss-flexbugs-fixes",
#     #     "@npm//postcss-loader",
#     #     "@npm//postcss-preset-env",
#     #     "@npm//postcss-safe-parser",
#     #     "@npm//react",
#     #     "@npm//react-app-polyfill",
#     #     "@npm//react-dev-utils",
#     #     "@npm//react-dom",
#     #     "@npm//resolve",
#     #     "@npm//style-loader",
#     #     "@npm//terser-webpack-plugin",
#     #     "@npm//url-loader",
#     #     "@npm//webpack",
#     #     "@npm//webpack-dev-server",
#     #     "@npm//webpack-manifest-plugin",
#     #     "@npm//workbox-webpack-plugin",
#     ],
# )


# # load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

# # nodejs_binary(
# #     name = "devserver",
# #     entry_point = "gobazel/web/scripts/null.js",
# #     data = [
# #         "scripts/null.js"
# #     ],
# #     #node_modules = "@//:node_modules",
# #     node_modules = ":web_node_modules",

# # )
