package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = ["index.tsx"],
    tsconfig = "//:tsconfig.build.json",
    deps = [
        "//common:src",
        "//publicapi:publicapi_ts",
        "@npm//react",
        "@npm//react-dom",
    ]
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ts_devserver(
    name = "devserver",
    additional_root_paths = [
        "npm/node_modules/react/umd",
        "npm/node_modules/react-dom/umd",
    ],
    port = 9999,
    serving_path = "/bundle.min.js",
    #entry_module = "gobazel/src/frontend/main",
    deps = [":lib"],
    static_files = [
        ":index.html",
        "@npm//node_modules/react:umd/react.development.js",
        "@npm//node_modules/react-dom:umd/react-dom.development.js"
    ],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "copy",
    visibility = ["//visibility:public"],
    entry_point = "gobazel/web/copy.js",
    data = [
        ":copy.js",
        ":index.html"
    ]
)
