package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["index.tsx"],
    tsconfig = "//:tsconfig.json",
    deps = [
      # "//src/model",
      # "//src/frontend/friend:src"
    ]
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ts_devserver(
    name = "devserver",
    additional_root_paths = [
        "__main__/node_modules/react/umd",
        "__main__/node_modules/react-dom/umd",
    ],
    port = 9999,
    serving_path = "/bundle.min.js",
    # entry_module = "gobazel/src/frontend/main",
    deps = [":src"],
    static_files = [
        ":index.html",
        "//:node_modules/react/umd/react.development.js",
        "//:node_modules/react-dom/umd/react-dom.development.js"
    ],
)
